--- a/strike_theme/style.css
+++ b/strike_theme/style.css
@@ -1,3 +1,16 @@
+/*
+Theme Name: OpenCUNY Strike!
+Text Domain: opencuny-home
+Version: 1.5
+Description: Striped down OpenCUNY.org landing page informing visitors of DSC's strike, Fall 2018. 
+Author: OpenCUNY
+Author URI: https://opencuny.org/
+License: Creative Commons Attribution-ShareAlike (4.0 International or later)
+License URI: https://creativecommons.org/licenses/by-sa/4.0/
+
+Use this theme to have fun, make somethign cool, and share what you've learned with others.
+*/
+
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Oswald');
 
 body, a {
